# Astro-Realtime

./: .env.example  .gitignore  Dockerfile  README.md  astro_realtime_manifest.json  docker-compose.yml  github_pages_manifest.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker.yml  pages.yml
app/: cli.py  config.py  main.py
app/api/routes/: astro.py  health.py  realtime.py
app/astro/: engine.py  models.py  provider_base.py  provider_builtin.py  provider_skyfield.py  validation.py
app/core/: aspects.py  cache.py  coords.py  enums.py  errors.py  houses.py  interpretation.py  time.py  zodiac.py
app/schemas/: request.py  response.py
app/services/: chart_service.py  realtime_service.py
app/static/: app.js  index.html  styles.css
app/tests/: test_api_v1.py  test_aspects.py  test_health.py  test_houses.py  test_realtime.py  test_validation.py
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: core_config.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: chart.py  positions.py  transits.py
backend/app/astrology/: aspects.py  chart_builder.py  houses.py  zodiac.py
backend/app/astronomy/: engine.py  ephemeris_loader.py  time_utils.py
backend/app/models/: request_models.py  response_models.py
backend/app/services/: astronomy_service.py  chart_service.py
backend/app/tests/: test_aspects.py  test_zodiac.py
backend/scripts/: download_ephemeris.py
docs/: PAGE_SPEC.md  README.md  app.js  index.html  styles.css
