[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astro-realtime"
version = "0.1.0"
description = "FastAPI and static frontend for real-time astrology calculations."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.9.2",
  "pydantic-settings==2.5.2",
  "python-dateutil==2.9.0.post0",
  "cachetools==5.5.0",
  "skyfield==1.49",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "httpx==0.27.2",
]

[project.scripts]
astro-realtime = "app.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["app.tests*"]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["."]
addopts = "-q"
