[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astro-realtime-engine"
version = "0.1.0"
description = "Starter API for real-time astronomy and astrology."
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.12",
  "uvicorn[standard]==0.34.2",
  "pydantic==2.11.3",
  "pydantic-settings==2.8.1",
  "skyfield==1.49",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.5",
  "httpx==0.28.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
